template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_fireboxcloud_name": {
            "defaultValue": "fireboxcloud",
            "type": "String"
        },
        "networkInterfaces_specializedVMNic_name": {
            "defaultValue": "specializedVMNic",
            "type": "String"
        },
        "networkSecurityGroups_inboundgroup_name": {
            "defaultValue": "inboundgroup",
            "type": "String"
        },
        "publicIPAddresses_specializedVMPublicIP_name": {
            "defaultValue": "specializedVMPublicIP",
            "type": "String"
        },
        "virtualNetworks_specializedVMVNET_name": {
            "defaultValue": "specializedVMVNET",
            "type": "String"
        },
        "storageAccounts_fireboxcloud_name": {
            "defaultValue": "fireboxcloud",
            "type": "String"
        },
        "storageAccounts_sezkpwttj75nkspecvm_name": {
            "defaultValue": "sezkpwttj75nkspecvm",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/b848d426-1b8f-4a50-aca0-3579045d9962/resourceGroups/fireboxcloud/providers/Microsoft.Compute/virtualMachines/fireboxcloud'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_fireboxcloud_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westus2",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_A2"
                },
                "storageProfile": {
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_fireboxcloud_name'),'-osDisk')]",
                        "createOption": "Attach",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_fireboxcloud_name'), '.blob.core.windows.net', concat('/', parameters('virtualMachines_fireboxcloud_name'),'/', parameters('virtualMachines_fireboxcloud_name'),'_azure.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_specializedVMNic_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_sezkpwttj75nkspecvm_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_fireboxcloud_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_specializedVMNic_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_sezkpwttj75nkspecvm_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b848d426-1b8f-4a50-aca0-3579045d9962/resourceGroups/fireboxcloud/providers/Microsoft.Network/networkInterfaces/specializedVMNic'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_specializedVMNic_name')]",
            "apiVersion": "2016-03-30",
            "location": "westus2",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_specializedVMPublicIP_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_specializedVMVNET_name')), '/subnets/Subnet')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_specializedVMPublicIP_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_specializedVMVNET_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b848d426-1b8f-4a50-aca0-3579045d9962/resourceGroups/fireboxcloud/providers/Microsoft.Network/networkSecurityGroups/inboundgroup'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_inboundgroup_name')]",
            "apiVersion": "2016-03-30",
            "location": "westus2",
            "properties": {
                "securityRules": [
                    {
                        "name": "webUI",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "outbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1-65535",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b848d426-1b8f-4a50-aca0-3579045d9962/resourceGroups/fireboxcloud/providers/Microsoft.Network/publicIPAddresses/specializedVMPublicIP'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_specializedVMPublicIP_name')]",
            "apiVersion": "2016-03-30",
            "location": "westus2",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b848d426-1b8f-4a50-aca0-3579045d9962/resourceGroups/fireboxcloud/providers/Microsoft.Network/virtualNetworks/specializedVMVNET'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_specializedVMVNET_name')]",
            "apiVersion": "2016-03-30",
            "location": "westus2",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "Subnet",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b848d426-1b8f-4a50-aca0-3579045d9962/resourceGroups/fireboxcloud/providers/Microsoft.Storage/storageAccounts/fireboxcloud'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_GRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_fireboxcloud_name')]",
            "apiVersion": "2016-01-01",
            "location": "westus2",
            "tags": {},
            "properties": {},
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b848d426-1b8f-4a50-aca0-3579045d9962/resourceGroups/fireboxcloud/providers/Microsoft.Storage/storageAccounts/sezkpwttj75nkspecvm'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_GRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_sezkpwttj75nkspecvm_name')]",
            "apiVersion": "2016-01-01",
            "location": "westus2",
            "tags": {},
            "properties": {},
            "dependsOn": []
        }
    ]
}
